# ironsight

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: CAMERA.md  SEQUENCE.md  WIRE.md
examples/: client.rs  event_loop.rs  gvp_testing.rs  mode_change_test.rs
src/: addr.rs  client.rs  codec.rs  conn.rs  error.rs  frame.rs  lib.rs  seq.rs
src/frp/: convert.rs  mod.rs
src/gvp/: client.rs  config.rs  conn.rs  log.rs  mod.rs  result.rs  splitter.rs  status.rs  track.rs  trigger.rs  video.rs
src/protocol/: ack.rs  camera.rs  config.rs  handshake.rs  mod.rs  shot.rs  status.rs
tests/: gvp_pcap.rs  gvp_pcap_messages.json
